Package_Tools/include-C/shumate/fertig/shumate_enum_types.h


/* This file is generated by glib-mkenums, do not modify it. This code is licensed under the same license as the containing project. Note that it links to GLib, so must comply with the LGPL linking clauses. */

#ifndef __SHUMATE_ENUM_TYPES_H__
#define __SHUMATE_ENUM_TYPES_H__

#include <glib-object.h>



/* enumerations from "shumate-file-cache.h" */
GType shumate_file_cache_error_get_type (void) ;
#define SHUMATE_TYPE_FILE_CACHE_ERROR shumate_file_cache_error_get_type()

/* enumerations from "shumate-map-source.h" */
GType shumate_map_projection_get_type (void) ;
#define SHUMATE_TYPE_MAP_PROJECTION shumate_map_projection_get_type()

/* enumerations from "shumate-scale.h" */
GType shumate_unit_get_type (void) ;
#define SHUMATE_TYPE_UNIT shumate_unit_get_type()

/* enumerations from "shumate-tile-downloader.h" */
GType shumate_tile_downloader_error_get_type (void) ;
#define SHUMATE_TYPE_TILE_DOWNLOADER_ERROR shumate_tile_downloader_error_get_type()

/* enumerations from "shumate-tile.h" */
GType shumate_state_get_type (void) ;
#define SHUMATE_TYPE_STATE shumate_state_get_type()

/* enumerations from "shumate-vector-reader-iter.h" */
GType shumate_geometry_type_get_type (void) ;
#define SHUMATE_TYPE_GEOMETRY_TYPE shumate_geometry_type_get_type()

/* enumerations from "shumate-vector-renderer.h" */
GType shumate_style_error_get_type (void) ;
#define SHUMATE_TYPE_STYLE_ERROR shumate_style_error_get_type()


#endif /* __SHUMATE_ENUM_TYPES_H__ */

/* Generated data ends here */